--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,29 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body>
-		<slot />
-	</body>
-</html>
+---
+import "./src/styles/global.css";
+import Header from "../components/Header";
+import Footer from "../components/Footer.astro";
+import { Toaster } from "react-hot-toast";
+---
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
+<!doctype html>
+<html lang="en" class="min-h-screen w-full">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Saturé</title>
+  </head>
+  <body
+    class="min-h-screen w-full bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-white"
+  >
+    <Header client:load />
+    <slot />
+    <Footer />
+    <Toaster
+      position="top-center"
+      toastOptions={{ duration: 2000 }}
+      client:load
+    />
+  </body>
+</html>
