fix: Correct border class in Footer component for consistent styling

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 <footer
-  class="text-center text-sm text-gray-500 flex items-center justify-center border-t border-gray-30 h-16 bg-white dark:bg-gray-800 dark:text-white dark:border-gray-700"
+  class="text-center text-sm text-gray-500 flex items-center justify-center border-t border-gray-300 border-gray-30 h-16 bg-white dark:bg-gray-800 dark:text-white dark:border-gray-700"
 >
   Made with ❤️ by alienriquebm - 2025 ©
 </footer>
