feat: Update ColorBox and Header styles for improved dark mode support; add theme initialization script

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,6 @@ import Layout from "../layouts/Layout.astro";
       </p>
     </div>
 
-    <PaletteActions client:load />
+    <PaletteActions client:only="react" />
   </ContentLayout>
 </Layout>
