--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,6 +8,7 @@ import { Toaster } from "react-hot-toast";
 <!doctype html>
 <html lang="en" class="min-h-screen w-full">
   <head>
+    <script src="/theme-init.js" type="text/javascript"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
