feat: add path aliasing for improved module imports across the project

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
-import PaletteActions from "../components/PaletteActions.tsx";
-import ContentLayout from "../layouts/ContentLayout.astro";
-import Layout from "../layouts/Layout.astro";
+import PaletteActions from "@/components/PaletteActions.tsx";
+import ContentLayout from "@/layouts/ContentLayout.astro";
+import Layout from "@/layouts/Layout.astro";
 ---
 
 <Layout>
