--- a/src/pages/saved.astro
+++ b/src/pages/saved.astro
@@ -1,7 +1,7 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import SavedPalettes from "../components/SavedPalettes.tsx";
-import ContentLayout from "../layouts/ContentLayout.astro";
+import Layout from "@/layouts/Layout.astro";
+import SavedPalettes from "@/components/SavedPalettes.tsx";
+import ContentLayout from "@/layouts/ContentLayout.astro";
 ---
 
 <Layout>
